# python-yc-client

./: .gitignore  .pre-commit-config.yaml  AUTHORS  CHANGELOG.md  Makefile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg  setup.py
examples/: create_instance.py  cron_snapshotter.py  instance_spec_example.yaml  preemptible_watchdog.py  usage_certificate.py
yandex_cloud_client/: __init__.py  __main__.py  base.py  client.py  cloud.py  constants.py  error.py  folder.py  operation.py  version.py  zone.py
yandex_cloud_client/certificate/: __init__.py
yandex_cloud_client/compute/: disk.py  image.py  instance.py  instance_group.py  placement_group.py  snapshot.py
yandex_cloud_client/iam/: keys.py  role.py  service_account.py  user_account.py
yandex_cloud_client/utils/: decorators.py  endpoints.py  helpers.py  request.py  response.py
yandex_cloud_client/vpc/: address.py  network_interface.py  route_table.py
