[metadata]
name = yandex-cloud-client
description-file = README

[flake8]
ignore = D203, W503, E722, W605
extend-ignore = E203
exclude =
    .git,
    build,
    dist,
    venv,
    .eggs,
    tests,
    setup.py,
    .old-examples,
    trash,
    simulation.py,
    .vscode
max-complexity = 15
max-line-length = 120

[pylint.message-control]
disable = C0330,R0801,R0913,R0904,R0903,R0902,W0511,C0116,C0115,W0703,R0914,R0914,C0302,R0912,R0915,R0401

[coverage:run]
branch = True
source = yandex_cloud_client
parallel = True
concurrency = thread, multiprocessing
omit = yandex_cloud_client/__main__.py

[mypy]
warn_unused_ignores = True
warn_unused_configs = True
disallow_untyped_defs = True
disallow_incomplete_defs = True
disallow_untyped_decorators = True
show_error_codes = True
